# playwright-bazel-demo

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  package.json  playwright.config.ts  tsconfig.json
tests/: google.spec.ts  simple.spec.ts
