load("@better_rules_javascript//commonjs:rules.bzl", "cjs_root")
load("@better_rules_javascript//javascript:rules.bzl", "js_library")
load("@better_rules_javascript//playwright:rules.bzl", "playwright_test")
load("@better_rules_javascript//typescript:rules.bzl", "ts_library")

package(default_visibility = ["//visibility:public"])

# CommonJS root
cjs_root(
    name = "root",
    package_name = "playwright-bazel-demo",
    descriptors = ["package.json"],
)

# TypeScript configuration
js_library(
    name = "tsconfig",
    srcs = ["tsconfig.json"],
    root = ":root",
)

# Compile TypeScript test files
ts_library(
    name = "test_lib",
    srcs = glob(["tests/**/*.ts"]),
    compile_deps = [
        "@npm//@types/node:lib",
        "@npm//@playwright/test:lib",
    ],
    compiler = "@better_rules_javascript//typescript:tsc",
    config = "tsconfig.json",
    config_dep = ":tsconfig",
    module = "commonjs",
    root = ":root",
)

# Playwright configuration
js_library(
    name = "playwright_config",
    srcs = ["playwright.config.ts"],
    root = ":root",
    deps = [":test_lib"],
)

# Playwright test target
playwright_test(
    name = "e2e_test",
    size = "large",
    timeout = "moderate",
    config = "playwright.config.ts",
    config_dep = ":playwright_config",
    dep = ":test_lib",
    playwright = "@npm//playwright:lib",
    extra_deps = [
        "@npm//@playwright/test:lib",
        "@npm//playwright:lib",
    ],
    tags = [
        "playwright",
        "e2e",
    ],
)