workspace(name = "playwright_bazel_demo")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Skylib
SKYLIB_VERSION = "1.5.0"

http_archive(
    name = "bazel_skylib",
    sha256 = "cd55a062e763b9349921f0f5db8c3933288dc8ba4f76dd9416aac68acee3cb94",
    urls = ["https://github.com/bazelbuild/bazel-skylib/releases/download/%s/bazel-skylib-%s.tar.gz" % (SKYLIB_VERSION, SKYLIB_VERSION)],
)

# Aspect Bazel Lib
ASPECT_BAZEL_LIB_VERSION = "2.8.1"

http_archive(
    name = "aspect_bazel_lib",
    sha256 = "688354ee6beeba7194243d73eb0992b9a12e8edeeeec5b6544f4b531a3112237",
    strip_prefix = "bazel-lib-%s" % ASPECT_BAZEL_LIB_VERSION,
    url = "https://github.com/aspect-build/bazel-lib/releases/download/v%s/bazel-lib-v%s.tar.gz" % (ASPECT_BAZEL_LIB_VERSION, ASPECT_BAZEL_LIB_VERSION),
)

load("@aspect_bazel_lib//lib:repositories.bzl", "aspect_bazel_lib_dependencies", "aspect_bazel_lib_register_toolchains")

aspect_bazel_lib_dependencies()
aspect_bazel_lib_register_toolchains()

# Rules Python
RULES_PYTHON_VERSION = "1.3.0"

http_archive(
    name = "rules_python",
    sha256 = "2cc26bbd53854ceb76dd42a834b1002cd4ba7f8df35440cf03482e045affc244",
    strip_prefix = "rules_python-%s" % RULES_PYTHON_VERSION,
    url = "https://github.com/bazelbuild/rules_python/releases/download/%s/rules_python-%s.tar.gz" % (RULES_PYTHON_VERSION, RULES_PYTHON_VERSION),
)

load("@rules_python//python:repositories.bzl", "py_repositories", "python_register_toolchains")

py_repositories()

python_register_toolchains(
    name = "python_3_11",
    python_version = "3.11",
)

# Rules File
RULES_FILE_VERSION = "4391f8dec5a9ddc4498c2a28ddefeddf0dde683b"

http_archive(
    name = "rules_file",
    sha256 = "ab828c3eb4e8e995e692c73f43cacbeedd9793c68d9a2946e0266ab1d5159414",
    strip_prefix = "rules_file-%s" % RULES_FILE_VERSION,
    url = "https://github.com/redoapp/rules_file/archive/%s.zip" % RULES_FILE_VERSION,
)

load("@rules_file//rules:init.bzl", "file_init")
file_init()

load("@rules_file//rules:workspace.bzl", "file_repositories")
file_repositories()

# Rules Javascript
RULES_JAVASCRIPT_VERSION = "cba523926c3f4f8aa5bb93f12629cca22f05c00a"

http_archive(
    name = "rules_javascript",
    sha256 = "e3e6a8533cc43c7964243e6bd700c241c87bd954cccd1fc42575bf695c18239e",
    strip_prefix = "rules_javascript-%s" % RULES_JAVASCRIPT_VERSION,
    url = "https://github.com/redoapp/rules_javascript/archive/%s.tar.gz" % RULES_JAVASCRIPT_VERSION,
)

load("@rules_javascript//rules:workspace.bzl", "repositories")

repositories(
    version = "20.15.1",  # Node.js version
)